--- a/templates/overview.html
+++ b/templates/overview.html
@@ -27,7 +27,7 @@
 <!-- Summary Cards -->
 <div class="row mb-4">
     <div class="col-md-3">
-        <div class="card text-center border-success">
+        <div class="budget-summary-card clickable-card text-success border-success">
             <div class="card-body">
                 <h5 class="card-title text-success">Total Income</h5>
                 <h3 class="text-success">${{ "%.2f"|format(total_income) }}</h3>
@@ -35,7 +35,7 @@
         </div>
     </div>
     <div class="col-md-3">
-        <div class="card text-center border-danger">
+        <div class="budget-summary-card clickable-card text-success border-danger">
             <div class="card-body">
                 <h5 class="card-title text-danger">Total Expenses</h5>
                 <h3 class="text-danger">${{ "%.2f"|format(total_expenses) }}</h3>
@@ -48,7 +48,7 @@
         </div>
     </div>
     <div class="col-md-3">
-        <div class="card text-center {{ 'border-success' if net_income >= 0 else 'border-warning' }}">
+        <div class="budget-summary-card clickable-card text-success {{ 'border-success' if net_income >= 0 else 'border-warning' }}">
             <div class="card-body">
                 <h5 class="card-title">Net Income</h5>
                 <h3 class="{{ 'text-success' if net_income >= 0 else 'text-warning' }}">
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div class="col-md-3">
-        <div class="card text-center border-info">
+        <div class="budget-summary-card clickable-card text-success border-info">
             <div class="card-body">
                 <h5 class="card-title text-info">Savings Rate</h5>
                 <h3 class="text-info">
