--- a/templates/wiki.html
+++ b/templates/wiki.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="wiki-container">
     <!-- Wiki Header -->
-    <div class="wiki-header bg-primary text-white py-4 mb-4 rounded">
+    <div class="wiki-header green-gradient py-4 mb-4 rounded">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-8">
